--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -23,6 +23,14 @@
 }
 
 .marker-manage {
+  min-height: 100%;
+  background-color: @gray-darker;
+  &.slideing {
+    -moz-user-select: none; 
+    -khtml-user-select: none;
+    user-select: none;
+    cursor: move!important;
+  }
   .nav.nav-tabs.nav-tabs-edit {
     margin-bottom: 0;
     border-bottom:none;
@@ -97,14 +105,9 @@
         right: 5px;
       }
     }
-    // .placeholder {
-    //   margin-bottom: 10px;
-    //   line-height: 40px;
-    //   height: 40px;
-    //   color: @gray;
-    //   background-color: #f1f1f1;
-    //   border: 1px dashed  #e1e1e1;
-    // }
+    .placeholder {
+      border-bottom: 1px dashed @brand-primary;
+    }
   }
 }
  
@@ -176,9 +179,156 @@
       }
     }
   }
+  .editbox{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 160px;
+    bottom: 0;
+    background-color: #313131;
+    .lesson-list {
+      height: 100%;
+      background-color: #414141;
+      padding: 0 160px 0 20px;
+      .placeholder {
+        border-color: transparent;
+      }
+    }
+    .scale-content {
+      height: 111px;
+      padding-top: 10px;
+      border-top: 1px solid #292929;
+    }
+    .scalebox {
+      position: relative;
+      height: 21px;
+      border-bottom: 1px solid #404040;
+      .lesson-list {
+        height: auto;
+        padding: 0;
+        background-color: transparent;
+        .item-lesson  {
+          position: relative;
+          padding: 0 10px;
+          margin-bottom: 0;
+          text-align:  left;
+          &:hover {
+            background-color: @brand-primary;
+          }
+          .title {
+            display: none;
+          }
+          .sqe-number {
+            display: inline;
+          }
+        }
+        .placeholder {
+          border-color: @brand-primary;
+        }
+      }
+      .scale {
+        position: absolute;
+        top: 0;
+        display: block;
+        z-index: 1;
+        padding-left: 5px;
+        color: #fff;
+        height: 20px;
+        line-height: 20px;
+        &.scale-red {
+          .line {
+            top: 0;
+            height: 160px;
+            border-color: red;
+          }
+          .scale-details {
+            visibility: visible;
+            font-size: 12px;
+          }
+        }
+        &.scale-blue {
+          cursor: pointer;
+          height: 132px;
+
+          .line {
+            top: 32px;
+            height: 100px;
+            border-color: #2b9cf0;
+          }
+          &.highlight,
+          &:hover {
+            width: 8px;
+            .line {
+              border-color: transparent;
+              background-color: rgba(45, 183, 245, 0.5);
+              -moz-animation:boxshow 1s ease infinite;
+              -webkit-animation:boxshow 1s ease infinite;
+              animation:boxshow 1s ease infinite;
+            }
+            .scale-details {
+              width: 220px;
+              margin-left: -110px;
+              visibility: visible;
+            }
+          }
+          &.moveing {
+            .line  {
+              -moz-animation:boxshow 0 ease infinite;
+              -webkit-animation:boxshow 0 ease infinite;
+              animation:boxshow 0 ease infinite;
+            }
+            .scale-details {
+              width: 220px;
+              margin-left: -110px;
+              visibility: visible;
+            }
+          }
+        }
+        &.scale-white {
+          .line {
+            height: 106px;
+            top: 26px;
+            border-color: #fff;
+            i {
+              position: absolute;
+              left: -8.5px;
+              top: -13.5px;
+            }
+          }
+        }
+        .scale-details {
+          position: absolute;
+          left: 0;
+          bottom:100%;
+          visibility: hidden;
+          min-width: 50px;
+          margin-left: -25px;
+          background-color: rgba(0, 0, 0, 0.8);
+          text-align: center;
+          color: #fff;
+        }
+        .line {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 25px;
+          border-left: 1px solid @gray-dark;
+          &.line-dashed {
+            top: 32px;
+            height: 100px;
+            border-left: 1px dashed #a3a3a3;
+          }
+        }
+        .scale-time {
+          display: inline-block;
+          font-size: 12px;
+          -webkit-transform:scale(0.83);
+        }
+      }
+    }
+  }
 }
-
-
 
 .marker-modal {
   .question-heading {
@@ -285,413 +435,4 @@
       color: #919191;
     }
   }
-}
-
-.marker-manage {
-  min-height: 100%;
-  background-color: @gray-darker;
-  &.slideing {
-    -moz-user-select: none; 
-    -khtml-user-select: none;
-    user-select: none;
-    cursor: move!important;
-  }
-  // .breadcrumb {
-  //   margin-bottom: 0;
-  //   line-height: 60px;
-  //   background-color: #eeeeee;
-  //   padding: 0 20px;
-  // }
-  // .lesson-dashboard  {
-  //   background-color: #eeeeee;
-  //   top:60px;
-  //   .toolbar {
-  //     background-color: #eeeeee;
-  //     border: 0;
-  //     width: 490px;
-  //     padding-right: 20px;
-  //     @media(max-width:@screen-sm-max) {
-  //       width: 350px;
-  //     }
-  //   }
-  //   .dashboard-body {
-  //     top: 0;
-  //     bottom: 30%;
-  //   }
-  //   .dashboard-content {
-  //     right: 510px;
-  //     @media(max-width:@screen-sm-max) and (min-width:@screen-sm-min)  {
-  //       right: 370px;
-  //     }
-  //     @media(max-width:@screen-xs-max) {
-  //       right: 20px;
-  //     }
-  //   }
-  //   .mask {
-  //     display: none;
-  //     position: absolute;
-  //     width: 100%;
-  //     top:0;
-  //     bottom: 30%;
-  //     background-color: transparent;
-  //   }
-  // }
-  // .lesson-list  {
-  //   border: 0;
-  //   margin: 0;
-  //   .item-lesson {
-  //     margin: 0 0 10px;
-  //     cursor: pointer;
-  //     line-height: 46px;
-  //     .before {
-  //       .text-overflow;
-  //     }
-  //   }
-  // }
-}
-
-
-
-.marker-manage .question-menu{
-  position: relative;
-  height: 90%;
-  .lesson-list {
-    min-height: 100px;
-    // .item-lesson {
-    //   background-color: transparent;
-      
-    // }
-    // .item-lesson.dragged {
-    //   background-color:transparent;
-    //   background-color: rgba(254, 255, 235, 0.9);
-    //   width: 150px!important;
-    //   overflow: hidden;
-    //   .title{
-    //     width: 100%;
-    //   }
-    //   .content {
-    //     display: none;
-    //   }
-    // }
-    // .item-lesson.disdrag {
-    //   background-color:transparent;
-    //   cursor: default;
-    //   color: @gray;
-    //   border: 1px dashed  #e1e1e1;
-    //   a {
-    //     color: @gray;
-    //     cursor: default;
-    //   }
-    //   .content {
-    //     &.not-add {
-    //       display: none;
-    //     }
-    //     &.have-add {
-    //       display: inline-block;
-    //     }
-    //   }
-    // }
-    // .placeholder {
-    //   background-color: #f1f1f1;
-    //   border: 1px dashed  #e1e1e1;
-    //   margin-bottom: 10px;
-    //   line-height: 46px;
-    //   height: 46px;
-    //   padding: 0 10px;
-    //   color: @gray;
-    //   .remask {
-    //     display: none;
-    //   }
-    // }
-    // .pagination  {
-    //   position: absolute;
-    //   bottom: -5px;
-    //   left: 0;
-    //   margin-bottom: 0;
-    // }
-  }
-  .lesson-list .item-lesson
-}
-
-.marker-manage .editbox{
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 160px;
-  bottom: 0;
-  background-color: #313131;
-  // .remask {
-  //   position: absolute;
-  //   left: 50%;
-  //   top: 50%;
-  //   visibility: visible;
-  //   width: 300px;
-  //   margin-top: -10px;
-  //   margin-left: -150px;
-  //   text-align: center;
-  // }
-  .lesson-list {
-    height: 100%;
-    background-color: #414141;
-    padding: 0 160px 0 20px;
-    // .placeholder {
-    //   height: 100%;
-    //   position: relative;
-    //   background-color: #2db7f5;
-    //   background-color: rgba(45,183,245, 0.5);
-    //   border:1px dashed #2db7f5;
-    //   color: #2db7f5;
-    //   text-align: center;
-    //   margin: 0;
-    //   .sub-remask {
-    //     display: none;
-    //   }
-    // }
-  }
-  .scale-content {
-    height: 111px;
-    padding-top: 10px;
-    border-top: 1px solid #292929;
-  }
-  .scalebox {
-    position: relative;
-    height: 21px;
-    border-bottom: 1px solid #404040;
-    .lesson-list {
-      height: auto;
-      padding: 0;
-      background-color: transparent;
-      .item-lesson  {
-        position: relative;
-        padding: 0 10px;
-        margin-bottom: 0;
-        text-align:  left;
-        &:hover {
-          background-color: @brand-primary;
-        }
-        .title {
-          display: none;
-        }
-        .sqe-number {
-          display: inline;
-        }
-      }
-    }
-    .scale {
-      position: absolute;
-      top: 0;
-      display: block;
-      z-index: 1;
-      padding-left: 5px;
-      color: #fff;
-      height: 20px;
-      line-height: 20px;
-      &.scale-red {
-        .line {
-          top: 0;
-          height: 160px;
-          border-color: red;
-        }
-        .scale-details {
-          visibility: visible;
-          font-size: 12px;
-        }
-      }
-      &.scale-blue {
-        cursor: pointer;
-        height: 132px;
-
-        .line {
-          top: 32px;
-          height: 100px;
-          border-color: #2b9cf0;
-        }
-        &.highlight,
-        &:hover {
-          width: 8px;
-          .line {
-            border-color: transparent;
-            background-color: rgba(45, 183, 245, 0.5);
-            -moz-animation:boxshow 1s ease infinite;
-            -webkit-animation:boxshow 1s ease infinite;
-            animation:boxshow 1s ease infinite;
-          }
-          .scale-details {
-            width: 220px;
-            margin-left: -110px;
-            visibility: visible;
-          }
-        }
-        &.moveing {
-          .line  {
-            .box-shadow(none);
-          }
-          .scale-details {
-            width: 220px;
-            margin-left: -110px;
-            visibility: visible;
-          }
-        }
-      }
-      &.scale-white {
-        .line {
-          height: 106px;
-          top: 26px;
-          border-color: #fff;
-          i {
-            position: absolute;
-            left: -8.5px;
-            top: -13.5px;
-          }
-        }
-      }
-      .scale-details {
-        position: absolute;
-        left: 0;
-        bottom:100%;
-        visibility: hidden;
-        min-width: 50px;
-        margin-left: -25px;
-        background-color: rgba(0, 0, 0, 0.8);
-        text-align: center;
-        color: #fff;
-      }
-      .line {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 25px;
-        border-left: 1px solid @gray-dark;
-        &.line-dashed {
-          top: 32px;
-          height: 100px;
-          border-left: 1px dashed #a3a3a3;
-        }
-      }
-      .scale-time {
-        display: inline-block;
-        font-size: 12px;
-        -webkit-transform:scale(0.83);
-      }
-    }
-    // .scale.red,
-    // .scale.blue{
-    //   left: 0;
-    //   bottom: 100%;
-    //   height: 100%;
-    //   top: -58px;
-    //   background-color: #ed634a;
-    //   @media(max-width:1297px) {
-    //     top: -40px;
-    //   }
-    // }
-    // .scale.white{
-    //   height: 80%;
-    //   .opacity(0.6);
-    //   .scale-details {
-    //     visibility: visible;
-    //     background-color: transparent;
-    //     bottom: -20px;
-    //   }
-    // }
-    // .scale.blue{
-    //   background-color: #2db7f5;
-    //   height: 78px;
-    //   @media(max-width:1297px) {
-    //     height: 60px;
-    //   }
-    //   &:hover {
-    //     background-color: #2db7f5;
-    //     background-color: rgba(45,183,245, 0);
-    //     .border {
-    //       background-color: #2db7f5;
-    //       background-color: rgba(45,183,245, 0.5);
-    //       -moz-animation:boxshow 1s ease infinite;
-    //       -webkit-animation:boxshow 1s ease infinite;
-    //       animation:boxshow 1s ease infinite;
-    //     }
-    //     .scale-details  {
-    //       .es-transition;
-    //       visibility: visible;
-    //         .opacity(1);
-    //     }
-    //   }
-    //   .border {
-    //     position: absolute;
-    //     width: 8px;
-    //     margin-left: -4px;
-    //     height: 100%;
-    //     cursor: pointer;
-    //   }
-    //   .scale-details {
-    //     .es-transition;
-    //     visibility: hidden;
-    //     .opacity(0);
-    //     background-color: transparent;
-    //     width: 220px;
-    //     margin-left: -110px;
-    //     background-color: rgba(0, 0, 0, 0.8);
-    //     z-index: 1;
-    //     .lesson-list  {
-    //       min-height: 40px;
-    //       height: auto;
-    //       margin: 0;
-    //       .item-lesson {
-    //         background-color: transparent;
-    //         border: none;
-    //         margin-bottom: 0;
-    //         text-align: left;
-    //         height: 46px;
-    //         overflow: hidden;
-    //         &:hover {
-    //           background-color: @brand-primary;
-    //         }
-    //         .title {
-    //           position: relative;
-    //           width: 100%;
-    //           .before {
-    //             width: 180px;
-    //             .number {
-    //               display: inline;
-    //             }
-    //           }
-    //           .icon-close {
-    //             display: inline;
-    //             position: absolute;
-    //             top: 15px;
-    //             right: 10px;
-    //             color: #fff;
-    //           }
-    //         }
-    //         .icon-close, .content,.icon-drag{
-    //           display: none;
-    //         }
-    //       }
-    //       .placeholder {
-    //         background-color: #f1f1f1;
-    //         background-color: rgba(255, 255, 255, 0.5)
-    //       }
-    //     }
-    //   }
-    //   .scale-details.visible {
-    //     .opacity(1);
-    //     visibility: visible;
-    //   }
-    // }
-    // .scale.blue.show {
-    //   background-color: transparent;
-    //   .border {
-    //     background-color: rgba(45,183,245, 0.5);
-    //     -moz-animation:boxshow 1s ease infinite;
-    //     -webkit-animation:boxshow 1s ease infinite;
-    //     animation:boxshow 1s ease infinite;
-    //   }
-    // }
-  }
-  
-}
-
-.ballon-video-player .vjs-marker.bg-primary {
-  background-color: @brand-primary!important;
 }
