--- a/src/Topxia/WebBundle/Resources/views/Attachment/item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/item.html.twig
@@ -8,11 +8,11 @@
        {% set can_preview = attachment.file.type in ['audio'] %}    
     {% endif %}
   	{% if not (can_preview_type and can_preview )%}   
-  		<a  class="attachment-preview color-gray"  href="javascript:;" data-toggle="tooltip" data-placement="top" title="
+  		<a  class="attachment-preview btn btn-sm btn-default"  href="javascript:;" data-toggle="tooltip" data-placement="top" title="
   		{% if not can_preview_type %}文件类型暂不支持预览 {% else %} 转码中请稍后预览{% endif %}">预览</a>
   	 {% else %}
-  	 	<a  class="attachment-preview"  href="#attachment-modal"  data-toggle="modal" data-url="{{ path('attachment_preview', {'id': attachment.id}) }}">预览</a>
+  	 	<a  class="attachment-preview btn btn-sm btn-info"  href="#attachment-modal"  data-toggle="modal" data-url="{{ path('attachment_preview', {'id': attachment.id}) }}">预览</a>
   	{% endif %}
-    <a class="attachment-download" href="{{ path('attachment_download', {'id': attachment.id}) }}">下载</a>
+    <a class="attachment-download btn btn-sm btn-primary" href="{{ path('attachment_download', {'id': attachment.id}) }}">下载</a>
   </span>
 </div>
