--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/index.html.twig
@@ -43,7 +43,7 @@
 	 {% endif %}
 
 	<div class="panel-body">
-		<ul class="lesson-list sortable-list" id="course-item-list" data-sort-url="{{ path('course_manage_lesson_sort', {id:course.id}) }}">
+		<ul class="lesson-list sortable-list js-period-list" id="course-item-list" data-sort-url="{{ path('course_manage_lesson_sort', {id:course.id}) }}">
 			{% for id, item in items %}
 			  {% if 'chapter' in id %}
 			    {% include 'TopxiaWebBundle:CourseChapterManage:list-item.html.twig' with {chapter: item} %}
