--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/open-course-header.html.twig
@@ -31,6 +31,7 @@
           </div>
         </div>
       </div>
+      <div class="black-mask"></div>
       
   </div>
   {% elseif course.type == 'liveOpen' %}
