--- a/web/assets/v2/less/page/open-course.less
+++ b/web/assets/v2/less/page/open-course.less
@@ -5,11 +5,19 @@
 }
 .open-course-header{
 	margin-bottom: 15px;
+ 	position: relative;
+ 	.black-mask{
+ 		position: absolute;
+ 		left: 0;
+ 		right: 0;
+ 		top:0;
+ 		bottom:0;
+ 		background-color: #000;
+ 	}
 	>.row{
 		margin: 0;
 	}
 } 
-
 .open-course-detail-main{
 	width: 45%;
 	float: left;
