--- a/web/assets/v2/css/main-green-light.css
+++ b/web/assets/v2/css/main-green-light.css
@@ -13640,6 +13640,15 @@ textarea {
 }
 .open-course-header {
   margin-bottom: 15px;
+  position: relative;
+}
+.open-course-header .black-mask {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #000;
 }
 .open-course-header > .row {
   margin: 0;
