--- a/src/Topxia/AdminBundle/Resources/views/System/Pay/wxpay.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/Pay/wxpay.html.twig
@@ -13,10 +13,10 @@
   </div>
   <div class="form-group">
     <div class="col-md-3 control-label">
-      <label for="wxpay_key">PID</label>
+      <label for="wxpay_appid">PID</label>
     </div>
     <div class="controls col-md-8">
-      <input type="text" id="wxpay_key" name="wxpay_key" class="form-control" value="{{payment.wxpay_key}}">
+      <input type="text" id="wxpay_appid" name="wxpay_appid" class="form-control" value="{{payment.wxpay_appid}}">
       <div class="help-block">PID即为公众号APPID。</div>
     </div>
   </div>
@@ -31,13 +31,25 @@
   </div>
   <div class="form-group">
     <div class="col-md-3 control-label">
-      <label for="wxpay_secret">商户平台Key</label>
+      <label for="wxpay_key">商户平台Key</label>
     </div>
     <div class="controls col-md-8">
-      <input type="text" id="wxpay_secret" name="wxpay_secret" class="form-control" value="{{payment.wxpay_secret}}">
+      <input type="text" id="wxpay_key" name="wxpay_key" class="form-control" value="{{payment.wxpay_key}}">
       <div class="help-block">
         商户平台key需要登录<a href="https://pay.weixin.qq.com/service_provider/index.shtml" target="_blank">微信商户平台</a>，在【账户设置】-【API安全】中设置密匙。
       </div>
     </div>
-  </div> 
+  </div>
+  <div class="form-group">
+    <div class="col-md-3 control-label">
+      <label for="wxpay_secret">公众帐号secert</label>
+    </div>
+    <div class="controls col-md-8">
+      <input type="text" id="wxpay_secret" name="wxpay_secret" class="form-control" value="{{payment.wxpay_secret}}">
+      <div class="help-block">
+        仅JSAPI支付的时候需要配置， 登录公众平台，进入开发者中心可设置.<a href="https://mp.weixin.qq.com/advanced/advanced?action=dev&t=advanced/dev&token=2005451881&lang=zh_CN" target="_blank">获取地址</a>
+      </div>
+    </div>
+  </div>
+
 </fieldset>
