--- a/src/Topxia/AdminBundle/Resources/views/AppPackageUpdate/modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/AppPackageUpdate/modal.html.twig
@@ -31,7 +31,9 @@
     </tr>
   </tbody>
 </table>
-
+<div class="alert alert-info">
+  当前从<strong>{{ package.fromVersion }}</strong>版本升级到<strong>{{ package.toVersion }}</strong>版本
+</div>
 <div id="package-update-progress" class="package-update-progress" style="display:none;">
   <div class="progress progress-striped active">
     <div class="progress-bar progress-bar-success" style="width: 0%"></div>
