--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -24,7 +24,8 @@
       {{ render(controller(template , {'sn':sn})) }}
 
       <div class="es-piece" style="margin-bottom:20px;"><div class="piece-header">{{'支付方式'|trans}}</div></div>
-      <form class="form-paytype" method="post" action="{{path('pay_center_pay')}}">
+      {% set form_action = path('pay_center_wxpay') %}
+      <form class="form-paytype" method="post" action="{{ form_action }}">
         <input type="hidden" name="targetType" value="{{order.targetType}}">
         <input type="hidden" name="orderId" value="{{order.id}}"/>
         
