--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/index.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/index.html.twig
@@ -13,12 +13,8 @@
     </div>
 
     <button class="btn btn-primary">{{'搜索'|trans}}</button>
-    {% set tooltip_content = '<div style="width:250px;">
-              <span style="color:blue;">{{"班级说明"|trans}}</span><br>
-              1. {{"编号及排序无法修改；"|trans}}<br>
-              2. {{"班级地址规则：域名/classroom/班级编号；"|trans}}
-            </div>' %}
-    {% include 'TopxiaAdminBundle:Widget:tooltip-widget.html.twig' with { icon: 'glyphicon-question-sign',content: tooltip_content, placement: 'left'} %}
+    {% set tooltipContent = {title: '班级说明'|trans, body: ['编号及排序无法修改；'|trans, '班级地址规则：域名/classroom/班级编号；'|trans]} %}
+    {% include 'TopxiaAdminBundle:Widget:tooltip-widget.html.twig' with { icon: 'glyphicon-question-sign', content: tooltipContent, placement: 'left'} %}
 
   </form>
   {% if classroomInfo%}
