--- a/src/Topxia/AdminBundle/Resources/views/Article/article-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Article/article-modal.html.twig
@@ -93,11 +93,7 @@
           <a class="glyphicon glyphicon-question-sign text-muted pull-right" id="article-property-tips" data-toggle="tooltip" data-placement="bottom" href="javascript:" title="">
           </a>
           <div id="article-property-tips-html" style="display:none;">
-
-            <p>{{'设为<strong>置顶</strong>后，该资讯将会显示在列表的最前面。'|trans}}</p>
-            <p>{{'设为<strong>头条</strong>后，如果设置了缩略图，则该资讯的缩略图将显示在资讯首页的头条图片区，图片尺寸建议统一为：754*424。'|trans}}</p>
-            <p>{{'设为<strong>推荐</strong>后，该资讯将会显示在页面右侧的推荐资讯中。'|trans}}</p>
-
+            {{ '资讯属性Tooltip'|trans|raw }}
           </div>
         </div>
       </div>
