--- a/src/Topxia/AdminBundle/Resources/views/Article/article-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Article/article-tr.html.twig
@@ -2,14 +2,14 @@
 <tr id="article-{{ article.id }}">
   <td><input value="{{ article.id }}" type="checkbox" data-role="batch-item"> {{ article.id }}</td>
   <td>
-    <span class="text-muted"><a href="{{ path('article_detail',{id:article.id}) }}"
-                                target="_blank">{{ article.title | slice(0,22) }}{% if article.title|length >22 %}...{% endif %}</a></span>
+    <span class="text-muted">
+      <a href="{{ path('article_detail',{id:article.id}) }}" target="_blank">{{ article.title | slice(0,22) }}{% if article.title|length >22 %}...{% endif %}</a>
+    </span>
   </td>
   {% include 'OrgBundle:Org/Parts:table-body-td.html.twig' with {orgCode: article.orgCode}%}
   <td>
     {% if category %}
-      <span class="text-muted"><a href="{{ path('article_category',{categoryCode:category.code}) }}"
-                                  target="_blank">{{ category.name }}</a></span>
+      <span class="text-muted"><a href="{{ path('article_category',{categoryCode:category.code}) }}" target="_blank">{{ category.name }}</a></span>
     {% else %}
       <span class="text-muted">{{'未分类'|trans}}</span>
     {% endif %}
@@ -35,7 +35,7 @@
 
   </td>
 
-  <td>{{ dict_text('articleStatus:html', article.status) }}</td>
+  <td>{{ dict_macro.articleStatus(article.status) }}</td>
 
   <td>
     <div class="btn-group">
