--- a/src/Topxia/AdminBundle/Resources/views/OpenCourse/tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourse/tr.html.twig
@@ -1,4 +1,5 @@
 {% import "TopxiaAdminBundle::macro.html.twig" as admin_macro %}
+{% import "TopxiaWebBundle:Common:data-dict-macro.html.twig" as dict_macro %}
 {% set target = ''~filter~'_index' %}
 <tr id="course-tr-{{ course.id }}">
   <td>{{ course.id }}</td>
@@ -16,7 +17,7 @@
     {% endif %}
   </td>
     
-  <td>{{ dict_text('courseStatus:html', course.status) }}</td>
+  <td>{{ dict_macro.courseStatus(course.status) }}</td>
   <td>
     {{ admin_macro.user_link(user) }}
     <br>
