--- a/src/Topxia/AdminBundle/Resources/views/Widget/tooltip-widget.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Widget/tooltip-widget.html.twig
@@ -1,9 +1,8 @@
 <div class="js-tooltip-twig-widget pull-right mll mts">
-  <span class="glyphicon {{ icon|default('glyphicon-question-sign') }} text-muted js-twig-widget-tips"
-        data-toggle="tooltip" data-placement="{{ placement|default('bottom') }}" href="javascript:;" title=""
-        data-original-title=""></span>
+  <span class="glyphicon {{ icon|default('glyphicon-question-sign') }} text-muted js-twig-widget-tips" data-placement="{{ placement|default('bottom') }}" href="javascript:;">
+  </span>
   <div class="js-twig-widget-html" style="display:none;">
-    {{ content|default('')|raw }}
+    {{ content|raw }}
   </div>
 </div>
 
