修复后台编辑区管理报错

--- a/src/Topxia/AdminBundle/Resources/views/Block/list-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/list-tr.html.twig
@@ -3,7 +3,7 @@
     <td>
         {{ blockTemplate.title }}
         <br>
-        <span class="text-muted text-sm">{{'编码：'|trans}}{{ block.code }}</span>
+        <span class="text-muted text-sm">{{'编码：'|trans}}{{ blockTemplate.code }}</span>
     </td>
     <td>
         {% if latestHistory.userId|default(null) %}
