--- a/src/Topxia/WebBundle/Resources/views/CourseChapterManage/list-item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseChapterManage/list-item.html.twig
@@ -1,7 +1,7 @@
 <li class="item-chapter {% if chapter.type == 'unit' %}item-chapter-unit{% endif %} clearfix" id="chapter-{{ chapter.id }}" style="word-break: break-all;" >
 	<div class="item-content">
 		{% if setting('course.custom_chapter_enabled')|default(true) %}
-			第 <span class="number">{{ chapter.number }}</span> {% if chapter.type == 'unit' %}{% if setting('default.part_name') %}{{ setting('default.part_name')|default('节'|trans) }}{% else %}{{'节'|trans}}{% endif %}{% else %}{% if setting('default.chapter_name') %}}{{ setting('default.chapter_name')|default('章'|trans) }}{% else %}{{'章'}|trans}}{% endif %}{% endif %}：
+			第 <span class="number">{{ chapter.number }}</span> {% if chapter.type == 'unit' %}{% if setting('default.part_name') %}{{ setting('default.part_name')|default('节'|trans) }}{% else %}{{'节'|trans}}{% endif %}{% else %}{% if setting('default.chapter_name') %}{{ setting('default.chapter_name')|default('章'|trans) }}{% else %}{{'章'|trans}}{% endif %}{% endif %}：
 		{% endif %}
 		{{ chapter.title }}
 	</div>
