feature: course manage permission

--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header-layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header-layout.html.twig
@@ -6,7 +6,7 @@
     <div class="es-section clearfix">
       {% block content %}{% endblock %}
 
-      {% if member.role|default('') == 'teacher' or has_permission('course_manage') %}
+      {% if member.role|default('') == 'teacher' or has_permission('admin_course_content_manage') %}
         <a href="{{ path('course_manage', {id:course.id}) }}" class="btn btn-default setting hidden-xs hidden-sm" title="{{'课程管理'|trans}}">
           <i class="es-icon es-icon-setting"></i>
         </a>
