--- a/src/Topxia/WebBundle/Resources/views/PayCenter/wxpay-h5.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/wxpay-h5.html.twig
@@ -9,14 +9,14 @@
   <font color="#f00"><b>支付信息</b></font><br/>
   <font color='#00ff55;'>订单号</font> : {{ order.sn }} <br/>
   <font color='#00ff55;'>订单详情</font> : {{ order.title }} <br/>
-  <font color='#00ff55;'>订单价格</font> : >¥{{ order.amount }} <br/>
+  <font color='#00ff55;'>订单价格</font> : ¥{{ order.amount }} <br/>
   <font color="#9ACD32"><b>该笔订单支付金额为<span style="color:#f00;font-size:50px">1分</span>钱</b></font><br/><br/>
   <div id="jsApiParameters" data-value="{{ jsApiParameters }}">
   </div>
   <div align="center">
-    <button
+    <button class="js-wxpay"
         style="width:210px; height:50px; border-radius: 15px;background-color:#FE6714; border:0px #FE6714 solid; cursor: pointer;  color:white;  font-size:16px;"
-        type="button" onclick="callpay()">立即支付
+        type="button">立即支付
     </button>
   </div>
   {% endblock %}
