--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/index.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomAdmin/index.html.twig
@@ -13,8 +13,7 @@
     </div>
 
     <button class="btn btn-primary">{{'搜索'|trans}}</button>
-    {% set tooltipContent = {title: '班级说明'|trans, body: ['编号及排序无法修改；'|trans, '班级地址规则：域名/classroom/班级编号；'|trans]} %}
-    {% include 'TopxiaAdminBundle:Widget:tooltip-widget.html.twig' with { icon: 'glyphicon-question-sign', content: tooltipContent, placement: 'left'} %}
+    {% include 'TopxiaAdminBundle:Widget:tooltip-widget.html.twig' with { icon: 'glyphicon-question-sign', content: '班级说明Tooltip'|trans|raw, placement: 'left'} %}
 
   </form>
   {% if classroomInfo%}
