--- a/src/Topxia/WebBundle/Resources/views/Coin/coin-table.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Coin/coin-table.html.twig
@@ -1,5 +1,6 @@
 
 {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
+{% import "TopxiaWebBundle:Common:data-dict-macro.html.twig" as dict_macro %}
 
 <table class="table table-striped table-hover" id="order-table">
   <thead>
