--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/sms.html.twig
@@ -111,7 +111,7 @@
         </div>
       </div>
       {% set hasSchoolName = ('' != setting('cloud_sms.sms_school_name')|default('')) %}
-      {% if smsStatus.status == "failed" and hasSchoolName and ('on' == setting('cloud_sms.show_message')|default('off')) %}
+      {% if smsStatus.status|default() == "failed" and hasSchoolName and ('on' == setting('cloud_sms.show_message')|default('off')) %}
         <div class="alert alert-danger">
           <a href="{{ path("admin_edu_cloud_sms_no_message") }}" class="close" data-dismiss="alert"
              aria-label="Close"><span aria-hidden="true">×</span></a>
