--- a/src/Topxia/WebBundle/Resources/views/script_boot.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/script_boot.html.twig
@@ -51,7 +51,7 @@
   app.lessonCopyEnabled = '{{setting("course.copy_enabled","0")}}';
   app.cloudSdkCdn = '{{ setting("developer.cloud_sdk_cdn") }}';
   app.mainScript = '{{ script_main }}';
-  app.lang = 'zh-cn';
+  app.lang = '{{ app.request.locale }}';
 </script>
 {% if setting('cdn.enabled') %} {% set cdnUrl = setting('cdn.url') %} {% else %} {% set cdnUrl = '' %} {% endif %}
 <script src="{{ cdnUrl }}{{ asset('assets/libs/seajs/seajs/2.2.1/sea.js') }}"></script>
