--- a/src/Topxia/WebBundle/Resources/views/CourseChapterManage/list-item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseChapterManage/list-item.html.twig
@@ -22,7 +22,7 @@
 		 {% else %}
 		  	<ul class="dropdown-menu" role="menu">
 			    <li>
-			      <a href="#" id="chapter-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_chapter_create', {id:course.id, type:'unit', parentId:'chapter-'~chapter.id}) }}"><i class="glyphicon glyphicon-plus"></i> {{'添加'|trans}} {% if setting('default.part_name') %}}{{ setting('default.part_name')|default('节'|trans) }}{% else %}{{'节'|trans}}{% endif %} </a>
+			      <a href="#" id="chapter-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_chapter_create', {id:course.id, type:'unit', parentId:'chapter-'~chapter.id}) }}"><i class="glyphicon glyphicon-plus"></i> {{'添加'|trans}} {% if setting('default.part_name') %}{{ setting('default.part_name')|default('节'|trans) }}{% else %}{{'节'|trans}}{% endif %} </a>
 			    </li>
 			   <li>
 			      <a href="#" id="chapter-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{% if course.type == 'normal' %}{{ path('course_manage_lesson_create', {id:course.id, parentId:'chapter-'~chapter.id}) }}{% else %}{{ path('live_course_manage_lesson_create', {id:course.id, parentId:'chapter-'~chapter.id}) }}{% endif %}"><i class="glyphicon glyphicon-plus"></i> {% if course.type == 'normal' %} {{'添加 课时'|trans}} {% else %} {{'添加 直播课时'|trans}} {% endif %} </a>
@@ -38,7 +38,7 @@
 
 		<button class="btn btn-link" title="{{'编辑'|trans}}" data-toggle="modal" data-target="#modal" data-keyboard="false" data-url="{{ path('course_manage_chapter_edit', {courseId:course.id, chapterId:chapter.id}) }}"><i class="glyphicon glyphicon-edit"></i></button>
 
-		<button class="btn btn-link delete-chapter-btn" title="{{'删除'|trans}}" data-url="{{ path('course_manage_chapter_delete', {courseId:course.id, chapterId:chapter.id}) }}" data-chapter="}{{ default.chapter_name|default('章'|trans) }}" data-part="}{{ default.part_name|default('节'|trans) }}"><i class="glyphicon glyphicon-trash"></i></button>
+		<button class="btn btn-link delete-chapter-btn" title="{{'删除'|trans}}" data-url="{{ path('course_manage_chapter_delete', {courseId:course.id, chapterId:chapter.id}) }}" data-chapter="{{ default.chapter_name|default('章'|trans) }}" data-part="{{ default.part_name|default('节'|trans) }}"><i class="glyphicon glyphicon-trash"></i></button>
 
 		</div>
 </li>
